--- a/config.yaml
+++ b/config.yaml
@@ -11,29 +11,29 @@
 carpentry: 'incubator'
 
 # Overall title for pages.
-title: 'Lesson Title' # FIXME
+title: 'How to make reproducible software environments'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: ~ # FIXME
+created: 2024-04-24
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries' # FIXME
+keywords: 'lesson, english, software, reproducibility'
 
-# Life cycle stage of the lesson
+# Life cycle stag
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha' # FIXME
+life_cycle: 'pre-alpha'
 
 # License of the lesson
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-rmd' # FIXME
+source: 'https://github.com/charmoniumQ/reproducibility-carpentry'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org' # FIXME
+contact: 'sam@samgrayson.me'
 
 # Navigation ------------------------------------------------
 #
@@ -59,7 +59,10 @@ contact: 'team@carpentries.org' # FIXME
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.Rmd
+- reproducibility_definition.Rmd
+- package_management.Rmd
+- containerization_and_virtualization.Rmd
+- package_managers_in_practice.Rmd
 
 # Information for Learners
 learners: 
